<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".CarCalculatorActivity">

        <!--Image View-->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_image_24" />

        <TextView
            android:id="@+id/textViewCarPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="0"
            android:textSize="20dp" />


        <!--Button to capture image-->
        <Button
            android:id="@+id/buttonRegisterUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/custom_button"
            android:onClick="onCklickRegisterUser"
            android:text="@string/calculate_auto_credit"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />





        <TextView
            android:id="@+id/textViewContractRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/percents"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/editInitialPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/initial_price"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/editTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/year"
            android:visibility="invisible" />


        <Button
            android:id="@+id/buttonDoReq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/custom_button"
            android:text="@string/ask_credit"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:visibility="invisible" />


        <Button
            android:id="@+id/buttonPayments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/custom_button"
            android:text="@string/calculate_payment_graphs"
            android:textColor="@color/colorWhite"
            android:onClick="onClickGetPayments"
            android:textSize="12sp"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/editTextLastPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/editTextLoanAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/editTextPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/editTextContractRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:visibility="invisible" />


    </LinearLayout>
</ScrollView>